--- a/404.html
+++ b/404.html
@@ -9,57 +9,75 @@
   <meta name="description" content="React Components" />
   <meta name="keywords" content="react, components, ui, alternative" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=cyrillic" rel="stylesheet" />
-  <style>* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  border: 0;
-  border-radius: 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-  -webkit-tap-highlight-color: transparent;
-  word-break: break-word; }
-  *:after, *:before {
-    box-sizing: border-box; }
-  *:focus {
-    outline: none; }
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      border: 0;
+      border-radius: 0;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      text-size-adjust: none;
+      -webkit-text-size-adjust: none;
+      -webkit-tap-highlight-color: transparent;
+      word-break: break-word;
+    }
 
-a {
-  text-decoration: none; }
+    *:after,
+    *:before {
+      box-sizing: border-box;
+    }
 
-textarea {
-  resize: none; }
+    *:focus {
+      outline: none;
+    }
 
-input, textarea {
-  -webkit-appearance: none !important;
-  -moz-appearance: none;
-  -ms-appearance: none;
-  appearance: none !important;
-  font-family: "Open Sans", Arial, sans-serif !important; }
+    a {
+      text-decoration: none;
+    }
 
-input:focus, textarea:focus {
-  outline: none; }
+    textarea {
+      resize: none;
+    }
 
-html, body {
-  width: 100%;
-  font-family: "Open Sans", Arial, sans-serif;
-  height: 100%;
-  overflow: hidden; }
+    input,
+    textarea {
+      -webkit-appearance: none !important;
+      -moz-appearance: none;
+      -ms-appearance: none;
+      appearance: none !important;
+      font-family: "Open Sans", Arial, sans-serif !important;
+    }
 
-table {
-  cellspacing: 0 !important;
-  border-spacing: 0 !important; }
+    input:focus,
+    textarea:focus {
+      outline: none;
+    }
 
-.clear:after {
-  content: "";
-  clear: both;
-  display: table; }
+    html,
+    body {
+      width: 100%;
+      font-family: "Open Sans", Arial, sans-serif;
+      height: 100%;
+      overflow: hidden;
+    }
 
-#root {
-  height: 100%; }
-</style>
+    table {
+      cellspacing: 0 !important;
+      border-spacing: 0 !important;
+    }
+
+    .clear:after {
+      content: "";
+      clear: both;
+      display: table;
+    }
+
+    #root {
+      height: 100%;
+    }
+  </style>
   <link rel="stylesheet" href="https://PeculiarVentures.github.io/react-components/assets/css/default.css" /><noscript>
     <div style="position:fixed;width:100%;height:100%;background:#fff">
       <div style="padding:40px">
@@ -96,7 +114,7 @@ table {
         <circle class="circle_progress_circle circle_progress_stroke_primary" cx="25" cy="25" r="20" fill="none" stroke-width="4"></circle>
       </svg></div>
   </div>
-  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_53b6041e06688005ba1d9a01e849e4637a10da3d.js"></script>
+  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_9a05ec65a8612c7b72c4538519a84d47c5d3ed30.js"></script>
 </body>
 
 </html>
