--- a/404.html
+++ b/404.html
@@ -100,7 +100,7 @@
   <link rel="apple-touch-icon" sizes="152x152" href="/react-components/favicons/apple-touch-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="/react-components/favicons/apple-touch-icon-180x180.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <meta name="apple-mobile-web-app-title" content="Alternative UI">
   <link rel="icon" type="image/png" sizes="32x32" href="/react-components/favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/react-components/favicons/favicon-16x16.png">
@@ -114,7 +114,7 @@
         <circle class="circle_progress_circle circle_progress_stroke_primary" cx="25" cy="25" r="20" fill="none" stroke-width="4"></circle>
       </svg></div>
   </div>
-  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_62647ab0bb219d59c63dcc65fcbf763c0b01aa94.js"></script>
+  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_2efd14d24c7642fda8b51353febdf9303f22e8ae.js"></script>
 </body>
 
 </html>
