--- a/index.html
+++ b/index.html
@@ -21,24 +21,24 @@
       text-size-adjust: none;
       -webkit-text-size-adjust: none;
       -webkit-tap-highlight-color: transparent;
-      word-break: break-word;
+      word-break: break-word
     }
 
     *:after,
     *:before {
-      box-sizing: border-box;
+      box-sizing: border-box
     }
 
     *:focus {
-      outline: none;
+      outline: none
     }
 
     a {
-      text-decoration: none;
+      text-decoration: none
     }
 
     textarea {
-      resize: none;
+      resize: none
     }
 
     input,
@@ -47,12 +47,12 @@
       -moz-appearance: none;
       -ms-appearance: none;
       appearance: none !important;
-      font-family: "Open Sans", Arial, sans-serif !important;
+      font-family: "Open Sans", Arial, sans-serif !important
     }
 
     input:focus,
     textarea:focus {
-      outline: none;
+      outline: none
     }
 
     html,
@@ -60,22 +60,22 @@
       width: 100%;
       font-family: "Open Sans", Arial, sans-serif;
       height: 100%;
-      overflow: hidden;
+      overflow: hidden
     }
 
     table {
       cellspacing: 0 !important;
-      border-spacing: 0 !important;
+      border-spacing: 0 !important
     }
 
     .clear:after {
       content: "";
       clear: both;
-      display: table;
+      display: table
     }
 
     #root {
-      height: 100%;
+      height: 100%
     }
   </style>
   <link rel="stylesheet" href="https://PeculiarVentures.github.io/react-components/assets/css/default.css" /><noscript>
@@ -114,7 +114,7 @@
         <circle class="circle_progress_circle circle_progress_stroke_primary" cx="25" cy="25" r="20" fill="none" stroke-width="4"></circle>
       </svg></div>
   </div>
-  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_3dd6b88da0f793c7d633a6f000920f3ed38e4cfa.js"></script>
+  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_01ad93947a059dc0090c6a158344c462b9892b8d.js"></script>
 </body>
 
 </html>
