--- a/404.html
+++ b/404.html
@@ -21,16 +21,13 @@
       text-size-adjust: none;
       -webkit-text-size-adjust: none;
       -webkit-tap-highlight-color: transparent;
-      word-break: break-word
+      word-break: break-word;
+      outline-color: #c4d8f7
     }
 
     *:after,
     *:before {
       box-sizing: border-box
-    }
-
-    *:focus {
-      outline: none
     }
 
     a {
@@ -114,7 +111,7 @@
         <circle class="circle_progress_circle circle_progress_stroke_primary" cx="25" cy="25" r="20" fill="none" stroke-width="4"></circle>
       </svg></div>
   </div>
-  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_1a897606bcaff93c5f1ea15a5529c41febe299e4.js"></script>
+  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_6b0dc5f1e78cfb56c9068493d11079cab4c9e7b0.js"></script>
 </body>
 
 </html>
