--- a/index.html
+++ b/index.html
@@ -34,6 +34,19 @@
       text-decoration: none
     }
 
+    *:focus:not(:active):not(:hover) {
+      outline-width: 2px;
+      outline-style: solid;
+      outline-offset: -2px
+    }
+
+    input:focus,
+    textarea:focus,
+    *:active,
+    *:hover {
+      outline: none !important
+    }
+
     textarea {
       resize: none
     }
@@ -111,7 +124,7 @@
         <circle class="circle_progress_circle circle_progress_stroke_primary" cx="25" cy="25" r="20" fill="none" stroke-width="4"></circle>
       </svg></div>
   </div>
-  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_6b0dc5f1e78cfb56c9068493d11079cab4c9e7b0.js"></script>
+  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_89d42f05710fd866a7e743c357eb03380d46b059.js"></script>
 </body>
 
 </html>
