--- a/404.html
+++ b/404.html
@@ -22,33 +22,33 @@
       -webkit-text-size-adjust: none;
       -webkit-tap-highlight-color: transparent;
       word-break: break-word;
-      outline-color: #c4d8f7
+      outline-color: #c4d8f7;
     }
 
     *:after,
     *:before {
-      box-sizing: border-box
+      box-sizing: border-box;
     }
 
     a {
-      text-decoration: none
+      text-decoration: none;
     }
 
     *:focus:not(:active):not(:hover) {
       outline-width: 2px;
       outline-style: solid;
-      outline-offset: -2px
+      outline-offset: -2px;
     }
 
     input:focus,
     textarea:focus,
     *:active,
     *:hover {
-      outline: none !important
+      outline: none !important;
     }
 
     textarea {
-      resize: none
+      resize: none;
     }
 
     input,
@@ -57,12 +57,12 @@
       -moz-appearance: none;
       -ms-appearance: none;
       appearance: none !important;
-      font-family: "Open Sans", Arial, sans-serif !important
+      font-family: "Open Sans", Arial, sans-serif !important;
     }
 
     input:focus,
     textarea:focus {
-      outline: none
+      outline: none;
     }
 
     html,
@@ -70,22 +70,22 @@
       width: 100%;
       font-family: "Open Sans", Arial, sans-serif;
       height: 100%;
-      overflow: hidden
+      overflow: hidden;
     }
 
     table {
       cellspacing: 0 !important;
-      border-spacing: 0 !important
+      border-spacing: 0 !important;
     }
 
     .clear:after {
       content: "";
       clear: both;
-      display: table
+      display: table;
     }
 
     #root {
-      height: 100%
+      height: 100%;
     }
   </style>
   <link rel="stylesheet" href="https://PeculiarVentures.github.io/react-components/assets/css/default.css" /><noscript>
@@ -96,25 +96,6 @@
       </div>
     </div>
   </noscript>
-  <link rel="manifest" href="/react-components/favicons/manifest.json">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#fff">
-  <meta name="application-name" content="Alternative UI">
-  <link rel="apple-touch-icon" sizes="57x57" href="/react-components/favicons/apple-touch-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="/react-components/favicons/apple-touch-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="/react-components/favicons/apple-touch-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="/react-components/favicons/apple-touch-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="/react-components/favicons/apple-touch-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="/react-components/favicons/apple-touch-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="/react-components/favicons/apple-touch-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="/react-components/favicons/apple-touch-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="/react-components/favicons/apple-touch-icon-180x180.png">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta name="apple-mobile-web-app-title" content="Alternative UI">
-  <link rel="icon" type="image/png" sizes="32x32" href="/react-components/favicons/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/react-components/favicons/favicon-16x16.png">
-  <link rel="shortcut icon" href="/react-components/favicons/favicon.ico">
 </head>
 
 <body>
@@ -124,7 +105,7 @@
         <circle class="circle_progress_circle circle_progress_stroke_primary" cx="25" cy="25" r="20" fill="none" stroke-width="4"></circle>
       </svg></div>
   </div>
-  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_16fbe71ca4f1e54684be48567153d36ce46151eb.js"></script>
+  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_bfb5d84c03e9070624a7e9edda1afc5053263725.js"></script>
 </body>
 
 </html>
