--- a/packages/react-components/.storybook/preview-head.html
+++ b/packages/react-components/.storybook/preview-head.html
@@ -3,49 +3,11 @@
   rel="stylesheet"
 />
 <style>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    border: 0;
-    border-radius: 0;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    text-size-adjust: none;
-    -webkit-text-size-adjust: none;
-    -webkit-tap-highlight-color: transparent;
-    word-break: break-word;
-  }
-  *:after, *:before {
-    box-sizing: border-box;
-  }
-  *:focus {
-    outline: none;
-  }
-  a {
-    text-decoration: none;
-  }
-  textarea {
-    resize: none;
-  }
-  input, textarea {
-    -webkit-appearance: none !important;
-    -moz-appearance: none;
-    -ms-appearance: none;
-    appearance: none !important;
-    font-family: inherit;
-  }
-  input:focus, textarea:focus {
-    outline: none;
-  }
-  table {
-    cellspacing: 0 !important;
-    border-spacing: 0 !important;
-  }
   html, body {
     font-family: 'Open Sans', Arial, sans-serif;
     height: 100%;
   }
+
   #root {
     padding: 20px;
     width: 100%;
@@ -54,8 +16,10 @@
     align-items: center;
     justify-content: center;
   }
+
   #root table {
     width: 100%;
   }
 </style>
+<link rel="stylesheet" href="./reset.css" />
 <link rel="stylesheet" href="./index.css" />
