--- a/packages/react-components/.storybook/preview-head.html
+++ b/packages/react-components/.storybook/preview-head.html
@@ -1,5 +1,5 @@
 <link
-  href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=cyrillic"
+  href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&display=swap"
   rel="stylesheet"
 />
 <style>
@@ -20,6 +20,8 @@
   #root table {
     width: 100%;
   }
+
 </style>
+<link rel="stylesheet" href="./variables.css" />
 <link rel="stylesheet" href="./reset.css" />
 <link rel="stylesheet" href="./index.css" />
