--- a/packages/react-components/.storybook/preview-head.html
+++ b/packages/react-components/.storybook/preview-head.html
@@ -8,13 +8,9 @@
     height: 100%;
   }
 
-  #root {
-    padding: 20px;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  #story-root {
+    padding: 20px 40px 40px;
+    min-height: 80vh;
   }
 
   #root table {
