--- a/packages/react-components/.storybook/preview-head.html
+++ b/packages/react-components/.storybook/preview-head.html
@@ -16,8 +16,7 @@
   #root table {
     width: 100%;
   }
-
 </style>
-<link rel="stylesheet" href="./variables.css" />
 <link rel="stylesheet" href="./reset.css" />
+<link rel="stylesheet" href="./theme.css" />
 <link rel="stylesheet" href="./index.css" />
