--- a/packages/react-components/.storybook/preview-head.html
+++ b/packages/react-components/.storybook/preview-head.html
@@ -17,6 +17,8 @@
     width: 100%;
   }
 </style>
+
 <link rel="stylesheet" href="./reset.css" />
-<link rel="stylesheet" href="./theme.css" />
+<link rel="stylesheet" href="./default_theme_variables.css" />
+<link rel="stylesheet" href="./default_theme.css" />
 <link rel="stylesheet" href="./index.css" />
