--- a/index.html
+++ b/index.html
@@ -21,33 +21,33 @@
       text-size-adjust: none;
       -webkit-text-size-adjust: none;
       -webkit-tap-highlight-color: transparent;
-      outline-color: #c4d8f7;
+      outline-color: #c4d8f7
     }
 
     *:after,
     *:before {
-      box-sizing: border-box;
+      box-sizing: border-box
     }
 
     a {
-      text-decoration: none;
+      text-decoration: none
     }
 
     *:focus:not(:active):not(:hover) {
       outline-width: 2px;
       outline-style: solid;
-      outline-offset: -2px;
+      outline-offset: -2px
     }
 
     input:focus,
     textarea:focus,
     *:active,
     *:hover {
-      outline: none !important;
+      outline: none !important
     }
 
     textarea {
-      resize: none;
+      resize: none
     }
 
     input,
@@ -56,12 +56,12 @@
       -moz-appearance: none;
       -ms-appearance: none;
       appearance: none !important;
-      font-family: "Open Sans", Arial, sans-serif !important;
+      font-family: "Open Sans", Arial, sans-serif !important
     }
 
     input:focus,
     textarea:focus {
-      outline: none;
+      outline: none
     }
 
     html,
@@ -69,22 +69,22 @@
       width: 100%;
       font-family: "Open Sans", Arial, sans-serif;
       height: 100%;
-      overflow: hidden;
+      overflow: hidden
     }
 
     table {
       cellspacing: 0 !important;
-      border-spacing: 0 !important;
+      border-spacing: 0 !important
     }
 
     .clear:after {
       content: "";
       clear: both;
-      display: table;
+      display: table
     }
 
     #root {
-      height: 100%;
+      height: 100%
     }
   </style>
   <link rel="stylesheet" href="https://PeculiarVentures.github.io/react-components/assets/css/default.css" /><noscript>
@@ -104,7 +104,7 @@
         <circle class="circle_progress_circle circle_progress_stroke_primary" cx="25" cy="25" r="20" fill="none" stroke-width="4"></circle>
       </svg></div>
   </div>
-  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_1c535f6b216c142ddf39078b269c0fec37a4bd58.js"></script>
+  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_1ed59a2d6235d4eeb7c01eea85c45262d46111e5.js"></script>
 </body>
 
 </html>
