--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charSet="UTF-8" />
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Alternative UI</title>
-  <meta name="description" content="React Components" />
-  <meta name="keywords" content="react, components, ui, alternative" />
+  <title>Peculiar React Components</title>
+  <meta name="description" content="Peculiar React Components" />
+  <meta name="keywords" content="peculiar, react, components, ui" />
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=cyrillic" rel="stylesheet" />
   <style>
     * {
@@ -87,7 +87,7 @@
       height: 100%
     }
   </style>
-  <link rel="stylesheet" href="https://PeculiarVentures.github.io/react-components/assets/css/default.css" /><noscript>
+  <link rel="stylesheet" href="https://PeculiarVentures.github.io/peculiar-react-components/assets/css/default.css" /><noscript>
     <div style="position:fixed;width:100%;height:100%;background:#fff">
       <div style="padding:40px">
         <h1>Looks like Javascript is disabled.</h1>
@@ -104,7 +104,7 @@
         <circle class="circle_progress_circle circle_progress_stroke_primary" cx="25" cy="25" r="20" fill="none" stroke-width="4"></circle>
       </svg></div>
   </div>
-  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/react-components/index_a6176649b5dabfb48a96f0e1a9fb18dee8860a1c.js"></script>
+  <script type="text/javascript" charSet="utf-8" src="https://PeculiarVentures.github.io/peculiar-react-components/index_a6176649b5dabfb48a96f0e1a9fb18dee8860a1c.js"></script>
 </body>
 
 </html>
